# orbitflows

./: .cruft.json  .gitignore  README.rst  pyproject.toml  quickstart.ipynb  setup.cfg  tox.ini
benchmarks/: README.md
benchmarks/common/: __init__.py  config.py  hardware.py  io.py  metrics.py  registry.py  runner.py
benchmarks/configs/: _base.yaml
benchmarks/scaling_train_size/: README.md  analyze.ipynb  config.yaml  run.py
docs/: conf.py  index.rst
examples/: gen_load_training_data.ipynb  gen_train_load_model.ipynb  integration_ex_2.ipynb  integration_test.ipynb  linear_nn_example.ipynb  physicalpendulum.ipynb  save_and_load.ipynb  saved_model_example.json  saved_model_example.pt  sim_transform.ipynb  test_gpt.ipynb  test_stuff.ipynb  tutorial.ipynb
examples/integration_tests/: _integration_ex_2 copy.ipynb  _small_correction_steps.ipynb  derivatives_check.ipynb  integration_ex_2.ipynb  integration_ex_3.ipynb  integration_simple_model.ipynb  integration_test.ipynb  simple_model.ipynb  small_correction_steps.ipynb  smooth_model.ipynb  spline_fitting.ipynb
examples/iso_disk_5_orbs/: iso_disk_5_orbs.pt  iso_disk_5_orbs_config.json
examples/tutorials/: gen_load_training_data.ipynb
figs/: basic_NF_usage.ipynb
integration_tests/: _integration_test.ipynb  gradients_example.ipynb  two_d_spline_ex.ipynb
integration_tests/correction_step_tests/: correction_funct_check.ipynb  proof_of_concept_isolated.ipynb
integration_tests/suite/: suite_2.py
licenses/: LICENSE.rst
mw_data/: mw_data.ipynb
mw_data/J_angle_grid/: mw_freqs_J_angle_grid.pt  mw_orb_grid_J_angle.py
mw_data/z_angle_grid/: mw_orb_grid_z_angle.py
orbitflows/: __init__.py  flow.py
orbitflows/flow/: __init__.py  conditioners.py  layers.py  normFlow.py
orbitflows/funct/: __init__.py  actionAngle.py  load.py  loss.py  orbit_props.py  plot.py  polar_cartesian.py  sample_gen.py
orbitflows/integrate/: __init__.py  correction.py  hamiltonian_approx.py  integrators.py
orbitflows/model/: DirectMappingModel.py  HamiltonianMappingModel.py  MappingModel.py  TorusMappingModel.py  __init__.py  base.py  potential_ex.ipynb
orbitflows/train/: __init__.py  known_sol_train.py  toy_losses.py
orbitflows/util/: __init__.py  actionAngle.py  orbit_props.py  plot.py  sample_gen.py
orbitflows/utils/: __init__.py  _load.py  _polarcartesian.py  actionAngle.py  functions.py  grid_viz.py  hamiltonians.py  load.py  mappings.py  potentials.py  sample.py
realistic_exploration_1D/: __init__.py  analysis_ex.ipynb  check_potential.ipynb  test_model.json  test_model.pt  train_and_evaluate.ipynb
src/: __init__.py
src/dynamics/: __init__.py  (+3 more)
training_data/: mw_orb_grid_J_angle.py  mw_orb_grid_r_angle.py
utils/: mcmillan17_pytorch.py
(+29 files in other folders)
