[metadata]
name = orbitflows
version = 0.1.0

[options]
packages = orbitflows
    orbitflows.models
    orbitflows.models.flow
    orbitflows.dynamics
    orbitflows.util
package_dir =
    orbitflows = src
    orbitflows.models = src/models
    orbitflows.models.flow = src/models/flow
    orbitflows.dynamics = src/dynamics
    orbitflows.util = src/util
